refactor: remove unused api